added some section and dynamic

--- a/src/components/Country/Country.css
+++ b/src/components/Country/Country.css
@@ -12,4 +12,11 @@
     -webkit-box-shadow: 9px 9px 33px -8px rgba(255,255,255,1);
     -moz-box-shadow: 9px 9px 33px -8px rgba(255,255,255,1);
     box-shadow: 9px 9px 33px -8px rgba(255,255,255,1);
+    /* box-shadow: 11px 9px 14px -7px rgba(255,255,255,0.75);
+    -webkit-box-shadow: 11px 9px 14px -7px rgba(255,255,255,0.75);
+    -moz-box-shadow: 11px 9px 14px -7px rgba(255,255,255,0.75); */
+}
+
+.visited{
+    background-color: aqua;
 }
