--- a/src/components/Countries/Countries.css
+++ b/src/components/Countries/Countries.css
@@ -3,3 +3,16 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
 }
+
+.visited{
+    background-color: aqua;
+    color: black;
+}
+
+
+/* flag-08 */
+.flag-container img{
+    width: 100px;
+    margin: 10px;
+}
+
